Fleshing out template structure, start to generate a 'home page'

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>{{title}}</title>
+    <title>My Blog</title>
 </head>
 <body>
-    {{&content}}
+    {{#published}}
+
+        {{&htmlContent}}
+
+    {{/published}}
 </body>
 </html>
