Start of atom feed, adding dates and urls to things

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Blog</title>
+    <title>{{title}}</title>
+    <link href="{{&atomUrl}}" type="application/atom+xml" rel="alternate" title="ATOM Feed" />
 </head>
 <body>
     {{#published}}
