--- a/templates/date/title/index.html
+++ b/templates/date/title/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>{{title}}</title>
+    <link href="{{&atomUrl}}" type="application/atom+xml" rel="alternate" title="ATOM Feed" />
 </head>
 <body>
     {{&content}}
