--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,14 @@
     <link href="{{&atomUrl}}" type="application/atom+xml" rel="alternate" title="ATOM Feed" />
 </head>
 <body>
+    <div class="header">
+        <h1><a href="/">{{title}}</a></h1>
+    </div>
+
     {{#published}}
+
+        <h1 class="postTitle">{{title}}</h1>
+        <div class="datetime" data-datetime="{{postIsoDate}}">{{postIsoDate}}</div>
 
         {{&htmlContent}}
 
