starting tags page generation, description storing.

--- a/templates/date/title/index.html
+++ b/templates/date/title/index.html
@@ -21,6 +21,6 @@
     <h1 class="postTitle">{{title}}</h1>
     <div class="datetime" data-datetime="{{postIsoDate}}">{{postIsoDate}}</div>
 
-    {{&content}}
+    {{&htmlContent}}
 </body>
 </html>
