--- a/templates/date/title/index.html
+++ b/templates/date/title/index.html
@@ -15,7 +15,7 @@
 </head>
 <body class="post">
     <div class="header">
-        <h1><a href="/">{{blogTitle}}</a></h1>
+        <h1><a href="../../">{{blogTitle}}</a></h1>
     </div>
 
     <h1 class="postTitle">{{title}}</h1>
