--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,7 @@
 </head>
 <body class="about">
     <div class="header">
-        <h1><a href="/">{{title}}</a></h1>
+        <h1><a href="./">{{title}}</a></h1>
     </div>
 
     <h2>About</h2>
