--- a/templates/index.html
+++ b/templates/index.html
@@ -6,12 +6,12 @@
 </head>
 <body class="index">
     <div class="header">
-        <h1><a href="/">{{title}}</a></h1>
+        <h1><a href="./">{{title}}</a></h1>
     </div>
 
     {{#published}}
 
-        <h1 class="postTitle"><a href="{{&url}}">{{title}}</a></h1>
+        <h1 class="postTitle"><a href="{{&path}}/">{{title}}</a></h1>
         <div class="datetime" data-datetime="{{postIsoDate}}">{{postIsoDate}}</div>
 
         {{&htmlContent}}
