--- a/templates/tags/index.html
+++ b/templates/tags/index.html
@@ -5,7 +5,7 @@
 </head>
 <body class="tags">
     <div class="header">
-        <h1><a href="/">{{title}}</a></h1>
+        <h1><a href="../">{{title}}</a></h1>
     </div>
 
     <h2>Tags</h2>
