Moving top level files to directories

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,12 @@
 <body class="index">
     <div class="header">
         <h1><a href="./">{{title}}</a></h1>
+        <div class="nav">
+            <a href="./about/">about</a>
+            <a href="./archives/">archives</a>
+            <a href="./tags/">tags</a>
+            <a href="#">search</a>
+        </div>
     </div>
 
     {{#published}}
