make tags visible to top level pages

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,11 @@
         </div>
     </div>
 
+    <ul class="tags">
+        {{#tags}}
+            <li>{{tag}}</li>
+        {{/tags}}
+    </ul>
     {{#published}}
 
         <h1 class="postTitle"><a href="{{&path}}/">{{title}}</a></h1>
