Adding partials and rootPath for use in partials.

--- a/templates/date/title/index.html
+++ b/templates/date/title/index.html
@@ -14,9 +14,7 @@
     <link href="../../css/index.css" rel="stylesheet" type="text/css">
 </head>
 <body class="post">
-    <div class="header">
-        <h1><a href="../../">{{blogTitle}}</a></h1>
-    </div>
+    {{> header}}
 
     <h1 class="postTitle">{{title}}</h1>
     <div class="datetime" data-datetime="{{postIsoDate}}">{{postIsoDate}}</div>
