--- a/templates/index.html
+++ b/templates/index.html
@@ -5,15 +5,7 @@
     <link href="{{&atomUrl}}" type="application/atom+xml" rel="alternate" title="ATOM Feed" />
 </head>
 <body class="index">
-    <div class="header">
-        <h1><a href="./">{{title}}</a></h1>
-        <div class="nav">
-            <a href="./about/">about</a>
-            <a href="./archives/">archives</a>
-            <a href="./tags/">tags</a>
-            <a href="#">search</a>
-        </div>
-    </div>
+    {{> header}}
 
     <ul class="tags">
         {{#tags}}
