--- a/templates/tags/index.html
+++ b/templates/tags/index.html
@@ -4,9 +4,7 @@
     <title>{{title}} - Tags</title>
 </head>
 <body class="tags">
-    <div class="header">
-        <h1><a href="../">{{title}}</a></h1>
-    </div>
+    {{> header}}
 
     <h2>Tags</h2>
 
