--- a/templates/tags/name/index.html
+++ b/templates/tags/name/index.html
@@ -5,9 +5,7 @@
     <link href="atom.xml" type="application/atom+xml" rel="alternate" title="ATOM Feed" />
 </head>
 <body class="tag">
-    <div class="header">
-        <h1><a href="../../">{{title}}</a></h1>
-    </div>
+    {{> header}}
 
     <h2>{{tag}}</h2>
 
