allow directories that have support files for drafts.

--- a/templates/date/title/index.html
+++ b/templates/date/title/index.html
@@ -8,7 +8,7 @@
 
     <title>{{title}}</title>
 
-    <link rel="canonical" href="{{url}}">
+    <link rel="canonical" href="{{&url}}">
     <link href="../../favicon.png" rel="icon">
     <link href="{{&atomUrl}}" type="application/atom+xml" rel="alternate" title="ATOM Feed" />
     <link href="../../css/index.css" rel="stylesheet" type="text/css">
