wire up search url, show comments in more human readable form, allow for inserting a link to comments.

--- a/templates/archives/index.html
+++ b/templates/archives/index.html
@@ -13,7 +13,7 @@
     {{#published}}
 
         <h1 class="postTitle"><a href="../{{&path}}/">{{title}}</a></h1>
-        <div class="datetime" data-datetime="{{postIsoDate}}">{{postIsoDate}}</div>
+        <div class="datetime" data-datetime="{{postIsoDate}}">{{postDateString}}</div>
         <div class="description">{{description}}</div>
 
     {{/published}}
