--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -6,6 +6,6 @@
         <a href="{{&rootPath}}/about/">about</a>
         <a href="{{&rootPath}}/archives/">archives</a>
         <a href="{{&rootPath}}/tags/">tags</a>
-        <a href="#">search</a>
+        <a href="http://duckduckgo.com/?q=site%3A{{blogDomain}}">search</a>
     </div>
 </div>
