--- a/templates/tags/name/index.html
+++ b/templates/tags/name/index.html
@@ -12,7 +12,7 @@
     {{#published}}
 
         <h3 class="postTitle"><a href="../../{{&path}}/">{{title}}</a></h3>
-        <div class="datetime" data-datetime="{{postIsoDate}}">{{postIsoDate}}</div>
+        <div class="datetime" data-datetime="{{postIsoDate}}">{{postDateString}}</div>
         <div class="description">{{description}}</div>
 
     {{/published}}
