Messing around with some styles

--- a/templates/archives/index.html
+++ b/templates/archives/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>{{title}}</title>
     <link href="{{&atomUrl}}" type="application/atom+xml" rel="alternate" title="ATOM Feed" />
+    {{> head}}
 </head>
 <body class="archive">
     <div class="header">
