--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -7,5 +7,8 @@
         <a href="{{&rootPath}}/archives/">archives</a>
         <a href="{{&rootPath}}/tags/">tags</a>
         <a href="http://duckduckgo.com/?q=site%3A{{blogDomain}}">search</a>
+        {{#atomUrl}}
+            <a href="{{&atomUrl}}">Feed</a>
+        {{/atomUrl}}
     </div>
 </div>
