--- a/templates/tags/name/index.html
+++ b/templates/tags/name/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <title>{{title}} - Tagged {{title}}</title>
-    <link href="atom.xml" type="application/atom+xml" rel="alternate" title="ATOM Feed" />
+    <link href="{{&atomUrl}}" type="application/atom+xml" rel="alternate" title="ATOM Feed" />
+    {{> head}}
 </head>
 <body class="tag">
     {{> header}}
