Styling, new head partial

--- a/templates/about/index.html
+++ b/templates/about/index.html
@@ -5,13 +5,16 @@
     {{> head}}
 </head>
 <body class="about">
-    <div class="header">
-        <h1><a href="../">{{title}}</a></h1>
+    {{> header}}
+
+    <div class="section">
+        <div class="sectionHeader">
+             <h1>About</h1>
+         </div>
+         <div class="sectionContent">
+            <p>Put something here.</p>
+        </div>
     </div>
-
-    <h2>About</h2>
-
-    <p>Put something here.</p>
 
 </body>
 </html>
