refactoring, not done yet.

--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -8,7 +8,7 @@
         <a href="{{&rootPath}}/tags/">tags</a>
         <a href="http://duckduckgo.com/?q=site%3A{{blogDomain}}">search</a>
         {{#atomUrl}}
-            <a href="{{&atomUrl}}">Feed</a>
+            <a href="{{&atomUrl}}">feed</a>
         {{/atomUrl}}
     </div>
 </div>
