Basic publish working again after refactor

--- a/templates/archives/index.html
+++ b/templates/archives/index.html
@@ -19,7 +19,7 @@
                 <h2 class="postTitle"><a href="../{{&path}}/">{{title}}</a></h2>
                 <div class="datetime" data-datetime="{{postIsoDate}}">~ {{postDateString}}</div>
             </div>
-            <div class="description">{{description}}</div>
+            <div class="description">{{description}} <a href="../{{&path}}/">&gt;</a></div>
 
         {{/published}}
          </div>
