Update templates, make them generic

--- a/templates/about/index.html
+++ b/templates/about/index.html
@@ -12,9 +12,8 @@
              <h1>About</h1>
          </div>
          <div class="sectionContent">
-            <p>Put something here.</p>
+            <p>Put HTML content here.</p>
         </div>
     </div>
-
 </body>
 </html>
