--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -1,6 +1,6 @@
 
 <div class="header">
-    <h1><a href="{{&rootPath}}/">{{blogTitle}}</a><span class="extendedTitle"> ~ james burke</span></h1>
+    <h1><a href="{{&rootPath}}/">{{blogTitle}}</a></h1>
 
     <div class="nav">
         <a href="{{&rootPath}}/about/">about</a>
