--- a/templates/year/month/day/title/index.html
+++ b/templates/year/month/day/title/index.html
@@ -5,7 +5,7 @@
     <meta name="author" content="{{author}}">
     <meta name="description" content="{{description}}">
 
-    <title>{{title}}</title>
+    <title>{{title}} ~ {{blogTitle}}</title>
 
     <link rel="canonical" href="{{&url}}">
     <link href="{{&atomUrl}}" type="application/atom+xml" rel="alternate" title="ATOM Feed" />
@@ -27,7 +27,5 @@
         <a href="{{&headers.comments}}">View Comments</a>
         {{/headers.comments}}
     </div>
-
-
 </body>
 </html>
